# packie

./: README.md
Packie/: main.py  preset.json
Packie/dat/: LICENSE  README.md  pyproject.toml
Packie/modules/: __init__.py  check_update.py  packager.py  uploader.py
